// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcIntegrationTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Reapit CRM Integration
            </label>
            <input
              class="mocked-styled-125 el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="el-has-grey-bg el-toggle-label"
              for="app-edit-is-ac-inegrated"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                Yes
              </span>
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              aria-label="Multi unselected options"
              class="mocked-styled-56 el-multi-select-un-selected"
              role="listbox"
            >
              <input
                aria-checked="false"
                aria-hidden="true"
                class="mocked-styled-52 el-multi-select-checkbox"
                id="test-static-id"
                role="option"
                type="checkbox"
              />
              <label
                class="el-has-grey-chips el-multi-select-label"
                for="test-static-id"
                role="option"
                tabindex="0"
              >
                MOCK_NAME
              </label>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Width
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Height
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Reapit CRM Integration
          </label>
          <input
            class="mocked-styled-125 el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="el-has-grey-bg el-toggle-label"
            for="app-edit-is-ac-inegrated"
            role="button"
            tabindex="0"
          >
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              Yes
            </span>
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-58 el-multi-select-input-wrapper"
        >
          <input
            class="mocked-styled-57 el-multi-select-input"
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <div
            aria-label="Multi selected options"
            class="mocked-styled-55 el-multi-select-selected"
            role="listbox"
          >
            <span
              class="el-ml2 el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name task"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
          <div
            aria-label="Multi unselected options"
            class="mocked-styled-56 el-multi-select-un-selected"
            role="listbox"
          >
            <input
              aria-checked="false"
              aria-hidden="true"
              class="mocked-styled-52 el-multi-select-checkbox"
              id="test-static-id"
              role="option"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
              role="option"
              tabindex="0"
            >
              MOCK_NAME
            </label>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Width
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Height
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Reapit CRM Integration
            </label>
            <input
              class="mocked-styled-125 el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="el-has-grey-bg el-toggle-label"
              for="app-edit-is-ac-inegrated"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                Yes
              </span>
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-44 el-loader-container"
          >
            <div
              class="mocked-styled-46 el-loader"
            >
              <div
                class="mocked-styled-47 el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Width
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Height
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Reapit CRM Integration
          </label>
          <input
            class="mocked-styled-125 el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="el-has-grey-bg el-toggle-label"
            for="app-edit-is-ac-inegrated"
            role="button"
            tabindex="0"
          >
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              Yes
            </span>
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Width
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Height
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot with no errors and empty types 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Reapit CRM Integration
            </label>
            <input
              class="mocked-styled-125 el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="el-has-grey-bg el-toggle-label"
              for="app-edit-is-ac-inegrated"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                Yes
              </span>
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeX"
              placeholder="Width of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Width
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="launchWindowSizeY"
              placeholder="Height of window your app will be launched in Reapit CRM"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Default App Window Height
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      When your application is integrated with Reapit CRM you can either launch it from the dedicated Apps menu in the Reapit CRM software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      You should toggle ‘Reapit CRM Integration’ only if you are intending your app to be launched from within Reapit CRM
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an Reapit CRM Screen. You should select the ones that are relevant to your app only. You can also select the default height and width of the window you wish your app to launch in within Reapit CRM.
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Reapit CRM Integration
          </label>
          <input
            class="mocked-styled-125 el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="el-has-grey-bg el-toggle-label"
            for="app-edit-is-ac-inegrated"
            role="button"
            tabindex="0"
          >
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              Yes
            </span>
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-58 el-multi-select-input-wrapper"
        >
          <input
            class="mocked-styled-57 el-multi-select-input"
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <div
            aria-label="Multi selected options"
            class="mocked-styled-55 el-multi-select-selected"
            role="listbox"
          >
            <span
              class="el-ml2 el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name task"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeX"
            placeholder="Width of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Width
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="launchWindowSizeY"
            placeholder="Height of window your app will be launched in Reapit CRM"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Default App Window Height
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
